refactor: use only DeQ interface's method